tests/snapshots/cli__encrypted__unlock_on_a_plaintext_vault_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - unlock
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: this vault is not encrypted
