tests/snapshots/cli__encrypted__vault_decrypt_refuses_a_plaintext_vault.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - vault
    - decrypt
    - "-y"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: this vault is not encrypted
