tests/snapshots/cli__encrypted__vault_decrypt_restores_the_notes.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - vault
    - decrypt
    - "-y"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Decrypted 1 note (0 already done).

----- stderr -----
