tests/snapshots/cli__encrypted__vault_encrypt_converts_the_whole_vault.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - vault
    - encrypt
    - "-y"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Encrypted 1 note (0 already done).

----- stderr -----
note: plaintext revisions recorded before this conversion remain readable in git history or a sync provider's version history; cleaning those is up to you
