tests/snapshots/cli__encrypted__vault_encrypt_refuses_an_already_encrypted_vault.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - vault
    - encrypt
    - "-y"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: this vault is already encrypted
