tests/snapshots/cli__encrypted__vault_passphrase_changes_the_wrapper_and_leaves_notes_alone.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - vault
    - passphrase
    - "--new-passphrase-file"
    - new-pw.txt
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Passphrase changed. Notes were not touched.

----- stderr -----
