tests/snapshots/cli__encrypted__vault_rekey_keeps_the_passphrase_by_default.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - "--passphrase-file"
    - test-passphrase.txt
    - vault
    - rekey
    - "-y"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Re-encrypted 1 note to [RECIPIENT].

----- stderr -----
